Wed Jul 16 09:46:16 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* target.make (INTERNAL_OBJCFLAGS): On darwin with library-combo
	apple-apple-apple, use -no-cpp-precomp rather than
	-traditional-cpp.

Wed Jul  9 16:28:14 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Made flattened directory structure the default.
	Explicitly print a message saying if we use flattened or
	non-flattened directory structure.
	* configure: Regenerated.
	
2003-07-06  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Remove '^' match from gcc version sed script.

2003-07-05  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add flags for openbsd like freebsd.

2003-07-05  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile.in (after-install): gzip man files
	* Documentation/GNUstep.7: Unziped.

2003-07-05  Adam Fedor  <fedor@gnu.org>

	* clean_os.sh: Clean netbsdelf.
	* configure.ac: Add -R flags for netbsdelf
	* target.make (netbsd/ADDITONAL_LDFLAGS): Idem.
	(Patches from Peter Cooper <comrade@obverse.com.au>

2003-06-29 Richard Frith-Macdonald <rfm@gnu.org>

	* user_home.c: Cast all arguments to isspace() as int ... for picky
	compiler versions.

2003-06-25  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile.in (after-install): Install man pages
	* Documentation/GNUstep.7.gz: New file (from Martin Brecher).

Wed Jun 25 15:47:46 2003  Tom Koelman <tkoelman@xs4all.nl>

	* Instance/subproject.make (subproject.def): Depend on DLL_DEF_INP.

2003-06-21  Adam Fedor  <fedor@gnu.org>

	* Instance/Documentation/autogsdoc.make: If not BASE_MAKE_LOADED
	print a better error message about needing to install GNUstep-base
	first.

2003-06-20  Adam Fedor  <fedor@gnu.org>

	* Version 1.7.1

2003-06-18  Adam Fedor  <fedor@gnu.org>

	* target.make (openbsd): Enable shared libs, use -fPIC not -fpic.

2003-06-17  Adam Fedor  <fedor@gnu.org>

	* Instance/Documentation/texi.make: Don't abort make if
	texi programs aren't available. Don't install if files not made.
